unpackaged/main/default/objects/T1_Control_Settings__c/T1_Control_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>TechnologyOne settings</description>
    <label>T1 Control Settings</label>
</CustomObject>