unpackaged/main/default/objects/T1_Control_Settings__c/fields/Bypass_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Workflow</label>
    <type>Checkbox</type>
</CustomField>