unpackaged/main/default/objects/T1_Control_Settings__c/fields/Case_Content_Retention_Months__c.field-meta.xml
<CustomField>
    <fullName>Case_Content_Retention_Months__c</fullName>
    <label>Case Content Retention Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>