unpackaged/main/default/objects/T1_Control_Settings__c/fields/Case_Followup_Amnesty_End__c.field-meta.xml
<CustomField>
    <fullName>Case_Followup_Amnesty_End__c</fullName>
    <label>Case Followup Amnesty End</label>
    <type>Date</type>
</CustomField>