unpackaged/main/default/objects/T1_Control_Settings__c/fields/Closed_Date_for_Archiving_Email__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_for_Archiving_Email__c</fullName>
    <description>This date will be used to select closed cases for email archive purposes.</description>
    <inlineHelpText>This date will be used to select closed cases for email archive purposes.</inlineHelpText>
    <label>Closed Date for Archiving Email</label>
    <type>DateTime</type>
</CustomField>