unpackaged/main/default/objects/T1_Control_Settings__c/fields/Customer_Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Customer_Community_URL__c</fullName>
    <label>Customer Community URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>