unpackaged/main/default/objects/T1_Control_Settings__c/fields/Employee_Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Employee_Community_URL__c</fullName>
    <label>Employee Community URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>