unpackaged/main/default/objects/T1_Control_Settings__c/fields/Internal_URL__c.field-meta.xml
<CustomField>
    <fullName>Internal_URL__c</fullName>
    <label>Internal URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>