unpackaged/main/default/objects/T1_Control_Settings__c/fields/Notification_URL__c.field-meta.xml
<CustomField>
    <fullName>Notification_URL__c</fullName>
    <label>Notification URL</label>
    <type>Url</type>
</CustomField>