unpackaged/main/default/objects/T1_Control_Settings__c/fields/PII_Content_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>PII_Content_Retention_Days__c</fullName>
    <label>PII Content Retention Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>