unpackaged/main/default/objects/T1_Control_Settings__c/fields/T1_Max_Notifications__c.field-meta.xml
<CustomField>
    <fullName>T1_Max_Notifications__c</fullName>
    <label>T1 Max Notifications</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>