unpackaged/main/default/objects/T1_Control_Settings__c/fields/T1_OAuth_Authorization__c.field-meta.xml
<CustomField>
    <fullName>T1_OAuth_Authorization__c</fullName>
    <label>T1 OAuth Authorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>