unpackaged/main/default/objects/T1_Control_Settings__c/fields/T1_OAuth_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>T1_OAuth_Endpoint__c</fullName>
    <label>T1 OAuth Endpoint</label>
    <type>Url</type>
</CustomField>