unpackaged/main/default/objects/T1_Control_Settings__c/fields/T1_Retry_Frequency__c.field-meta.xml
<CustomField>
    <fullName>T1_Retry_Frequency__c</fullName>
    <description>T1 Retry schedule frequency in minutes</description>
    <label>T1 Retry Frequency</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>