unpackaged/main/default/objects/T1_Control_Settings__c/fields/T1_Timeout_milliseconds__c.field-meta.xml
<CustomField>
    <fullName>T1_Timeout_milliseconds__c</fullName>
    <label>T1 Timeout milliseconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>